# Denoiser

./: CMakeLists.txt  Parameters.md  README.md  bilateral.py  denoiser.h  main.cpp  process.py
Denoising/: Console.cpp  Console.h  Denoising.pro  calculationthread.cpp  calculationthread.h  datamanager.cpp  datamanager.h  iothread.cpp  iothread.h  mesh.h  parameterset.cpp  parameterset.h  parametersetwidget.cpp  parametersetwidget.h
Denoising/Algorithms/: BilateralMeshDenoising.cpp  BilateralMeshDenoising.h  BilateralNormalFilteringForMeshDenoising.cpp  BilateralNormalFilteringForMeshDenoising.h  FastAndEffectiveFeaturePreservingMeshDenoising.cpp  FastAndEffectiveFeaturePreservingMeshDenoising.h  GuidedMeshNormalFiltering.cpp  GuidedMeshNormalFiltering.h  MeshDenoisingBase.cpp  MeshDenoisingBase.h  MeshDenoisingViaL0Minimization.cpp  MeshDenoisingViaL0Minimization.h  Noise.cpp  Noise.h  NonIterativeFeaturePreservingMeshFiltering.cpp  NonIterativeFeaturePreservingMeshFiltering.h  meshdenoisebase.cpp  meshdenoisebase.h
OpenMesh/: OpenMesh.pro
OpenMesh/Core/Mesh/: ArrayKernel.cc
OpenMesh/Core/Templates/: newClass.cc  newClassT.cc
